[package]
name = "hot_dog"
version = "0.1.0"
authors = ["ik825"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
async-std = "1.13.0"
chksum = "0.3.0"
dioxus = { version = "0.6.0", features = [] }
probe-rs = "0.25.0"
rfd = "0.15.1"
tokio = "1.42.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
